--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "test": "echo 'Error: no test specified' && exit 1"
   },
-  "author": "Nuevo Autor",
+  "author": "Nombre Actualizado",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
